--- a/templates/default/label/app.html
+++ b/templates/default/label/app.html
@@ -2,45 +2,51 @@
 {{template "html" .}}
 <html lang="zh-cn">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <title>APP下载 - 电影先生</title>
-    <meta name="keywords" content="电影先生,dianyi.ng,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧">
-    <meta name="description" content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。">
-    <meta name="referrer" content="always">
-    <meta name="referrer" content="no-referrer">
+    <meta content="电影先生,dianyi.ng,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧"
+          name="keywords">
+    <meta content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。"
+          name="description">
+    <meta content="always" name="referrer">
+    <meta content="no-referrer" name="referrer">
     {{template "header" .}}
 </head>
 <body class="article page">
-<header id="header" class="wrapper">
+<header class="wrapper" id="header">
     <div class="header-content  ">
         <div class="content">
             <div class="brand">
-                <a href="../index.html" class="logo" title="电影先生"><img src="../statics/picture/logo-s.png" alt="电影先生"></a>
+                <a class="logo" href="../index.html" title="电影先生"><img alt="电影先生"
+                                                                           src="../statics/picture/logo-s.png"></a>
             </div>
 
             <div class="nav-search">
                 <form action="/search.html" class="search-dh">
-                    <div class="search-box"><input class="search-input ac_wd txtKeywords" type="text" name="wd" autocomplete="off" placeholder="搜索电影、电视剧、综艺、动漫、演员">
+                    <div class="search-box"><input autocomplete="off" class="search-input ac_wd txtKeywords" name="wd"
+                                                   placeholder="搜索电影、电视剧、综艺、动漫、演员" type="text">
                         <div class="search-drop">
                             <div class="drop-content-items ac_hot none">
                                 <div class="list-item list-item-title"><strong>大家都在搜这些影片</strong></div>
                                 <div class="search-tag">
-                                    <a href="../search.html" class="hot "><i class="icon-hot"></i>一念关山</a>
-                                    <a href="../search.html" class="hot "><i class="icon-hot"></i>神隐</a>
-                                    <a href="../search.html" class="hot "><i class="icon-hot"></i>鸣龙少年</a>
-                                    <a href="../search.html" class="hot "><i class="icon-hot"></i>南海归墟</a>
-                                    <a href="../search.html" class=""><i class="icon-hot"></i>坚如磐石</a>
-                                    <a href="../search.html" class=""><i class="icon-hot"></i>脱轨</a>
-                                    <a href="../search.html" class=""><i class="icon-hot"></i>斗破苍穹之少年归来</a>
-                                    <a href="../search.html" class=""><i class="icon-hot"></i>热烈</a>
-                                    <a href="../search.html" class=""><i class="icon-hot"></i>涉过愤怒的海</a>
-                                    <a href="../search.html" class=""><i class="icon-hot"></i>93国际列车大劫案：莫斯科行动</a>
-                                    <a href="../search.html" class=""><i class="icon-hot"></i>志愿军：雄兵出击</a>
+                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>一念关山</a>
+                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>神隐</a>
+                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>鸣龙少年</a>
+                                    <a class="hot " href="../search.html"><i class="icon-hot"></i>南海归墟</a>
+                                    <a class="" href="../search.html"><i class="icon-hot"></i>坚如磐石</a>
+                                    <a class="" href="../search.html"><i class="icon-hot"></i>脱轨</a>
+                                    <a class="" href="../search.html"><i class="icon-hot"></i>斗破苍穹之少年归来</a>
+                                    <a class="" href="../search.html"><i class="icon-hot"></i>热烈</a>
+                                    <a class="" href="../search.html"><i class="icon-hot"></i>涉过愤怒的海</a>
+                                    <a class="" href="../search.html"><i class="icon-hot"></i>93国际列车大劫案：莫斯科行动</a>
+                                    <a class="" href="../search.html"><i class="icon-hot"></i>志愿军：雄兵出击</a>
                                 </div>
                             </div>
                         </div>
-                        <a href="../top.html" class="search-btn search-cupfox" id="search-cupfox" title="电影先生排行榜"><i class="icon-cupfox phb"></i><span>搜全网</span></a>						<button class="search-btn search-go" type="submit"><i class="icon-search"></i></button>
+                        <a class="search-btn search-cupfox" href="../top.html" id="search-cupfox"
+                           title="电影先生排行榜"><i class="icon-cupfox phb"></i><span>搜全网</span></a>
+                        <button class="search-btn search-go" type="submit"><i class="icon-search"></i></button>
                         <button class="cancel-btn" type="button">取消</button>
                     </div>
                 </form>
@@ -103,27 +109,32 @@
                                     </li>
                                     <li class="grid-item">
                                         <a href="../v/dianying.html" title="电影">
-                                            <i class="icon-cate-dy"></i> 											<div class="grid-item-name">电影</div>
+                                            <i class="icon-cate-dy"></i>
+                                            <div class="grid-item-name">电影</div>
                                         </a>
                                     </li>
                                     <li class="grid-item">
                                         <a href="../v/dianshiju.html" title="电视剧">
-                                            <i class="icon-cate-ds"></i> 											<div class="grid-item-name">电视剧</div>
+                                            <i class="icon-cate-ds"></i>
+                                            <div class="grid-item-name">电视剧</div>
                                         </a>
                                     </li>
                                     <li class="grid-item">
                                         <a href="../v/dongman.html" title="动漫">
-                                            <i class="icon-cate-dm"></i> 											<div class="grid-item-name">动漫</div>
+                                            <i class="icon-cate-dm"></i>
+                                            <div class="grid-item-name">动漫</div>
                                         </a>
                                     </li>
                                     <li class="grid-item">
                                         <a href="../v/zongyi.html" title="综艺">
-                                            <i class="icon-cate-zy"></i> 											<div class="grid-item-name">综艺</div>
+                                            <i class="icon-cate-zy"></i>
+                                            <div class="grid-item-name">综艺</div>
                                         </a>
                                     </li>
                                     <li class="grid-item">
                                         <a href="../arttype/zixun.html" title="资讯">
-                                            <i class="iconfont icon-zixun2"></i> 											<div class="grid-item-name">资讯</div>
+                                            <i class="iconfont icon-zixun2"></i>
+                                            <div class="grid-item-name">资讯</div>
                                         </a>
                                     </li>
                                     <li class="grid-item">
@@ -137,7 +148,7 @@
                                         </a>
                                     </li>
                                     <li class="grid-item grid-more android">
-                                        <a href="" class="grid-more-link" title="下载电影先生APP">
+                                        <a class="grid-more-link" href="" title="下载电影先生APP">
                                             <div class="grid-item-name">下载客户端</div>
                                         </a>
                                     </li>
@@ -154,7 +165,7 @@
                             <div class="drop-content-box">
                                 <ul class="drop-content-items" id="history">
                                     <li class="list-item list-item-title">
-                                        <a href="" class="playlist historyclean"><i class="icon-clear"></i></a>
+                                        <a class="playlist historyclean" href=""><i class="icon-clear"></i></a>
                                         <strong>我的观影记录</strong></li>
                                 </ul>
                             </div>
@@ -167,43 +178,19 @@
     </div>
 </header>
 
-<script>
-    $(".nav-menu-search").click(function () {
-        $(".nav-search").addClass("block");
-    });
-    $(document).scroll(function() {
-        var H = $(document).scrollTop();
-        if(H > 20) {
-            $(".header-content").addClass("header-bg");
-        } else {
-            $(".header-content").removeClass("header-bg");
-        }
-        if(H > 140) {
-            $(".header-content").addClass("header-bg");
-            $(".search-dh").append($(".search-box"));
-            $(".nav-menu-search").click(function () {
-                $(".nav-search").addClass("block");
-            });
-        } else {
-            $(".header-content").removeClass("header-bg");
-            $(".search-main").append($(".search-box"));
 
-        }
-    });
-</script>
-
-
-<main id="main" class="wrapper">
+<main class="wrapper" id="main">
     <div class="content">
         <div>
             <h1 class="page-title">电影先生APP</h1>
             <div class="box">
                 <div class="article-content">
-                    <h2 id="url">APP介绍</h2>
+                    <h2>APP介绍</h2>
                     <p>聚合全网影片，你想看的全都有！每天搜集互联网上最新、最热、最全的影视大片，高清正版免费在线观看！</p>
                     <ul>
                         <li><em><b>防封</b></em>：如果域名被封无法访问，可通过App打开、查看
-                            <a href="../web.html">最新网址</a>；</li>
+                            <a href="../web.html">最新网址</a>；
+                        </li>
                         <li><em><b>最新</b></em>：最新热门VIP在线看与下载资源同步更新；</li>
                         <li><em><b>多源</b></em>：持续添加优质线路、视频源供您切换，画质清晰、播放流畅；</li>
                         <li><em><b>海量</b></em>：聚合全网资源，想看啥就看啥</li>
@@ -212,8 +199,10 @@
                     <h2 id="url">APP下载</h2>
                     <p>下载提示：请收藏电影先生域名到浏览器，或添加至桌面图标。</p>
                     <p>
-                        <a href="https://dianyi.ng/dianying.apk" class="btn-important btn-large shadow-drop article-btn"><i class="icon-android"></i>安卓APP下载</a>
-                        <a href="https://www.dianyi.ng/dianying.apk" class="btn-important btn-large shadow-drop article-btn"><i class="icon-apple"></i>苹果APP下载</a>
+                        <a class="btn-important btn-large shadow-drop article-btn"
+                           href="https://dianyi.ng/dianying.apk"><i class="icon-android"></i>安卓APP下载</a>
+                        <a class="btn-important btn-large shadow-drop article-btn"
+                           href="https://www.dianyi.ng/dianying.apk"><i class="icon-apple"></i>苹果APP下载</a>
                     </p>
                     <img src="../statics/images/app-download-android.png"><br> &nbsp; 安卓手机扫码下载
                     <hr>
@@ -245,18 +234,18 @@
         </div>
     </div>
 </main>
-<footer id="footer" class="wrapper pd60">
-    <p class="sitemap"><img src="../statics/picture/logo.png" height="10">
-        <a target="_blank" href="/about.html">关于</a><span class="space-line-bold"></span>
-        <a target="_blank" href="../top.html">排行榜</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/map.html">MAP</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/rss.xml">RSS</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/rss/baidu.xml">Baidu</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/rss/google.xml">Google</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/rss/bing.xml">Bing</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/rss/so.xml">SO</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/rss/sogou.xml">Sogou</a><span class="space-line-bold"></span>
-        <a target="_blank" href="/rss/sm.xml">SM</a>
+<footer class="wrapper pd60" id="footer">
+    <p class="sitemap"><img height="10" src="../statics/picture/logo.png">
+        <a href="/about.html" target="_blank">关于</a><span class="space-line-bold"></span>
+        <a href="../top.html" target="_blank">排行榜</a><span class="space-line-bold"></span>
+        <a href="/map.html" target="_blank">MAP</a><span class="space-line-bold"></span>
+        <a href="/rss.xml" target="_blank">RSS</a><span class="space-line-bold"></span>
+        <a href="/rss/baidu.xml" target="_blank">Baidu</a><span class="space-line-bold"></span>
+        <a href="/rss/google.xml" target="_blank">Google</a><span class="space-line-bold"></span>
+        <a href="/rss/bing.xml" target="_blank">Bing</a><span class="space-line-bold"></span>
+        <a href="/rss/so.xml" target="_blank">SO</a><span class="space-line-bold"></span>
+        <a href="/rss/sogou.xml" target="_blank">Sogou</a><span class="space-line-bold"></span>
+        <a href="/rss/sm.xml" target="_blank">SM</a>
     </p>
     <p>本站所有内容均来自互联网分享站点所提供的公开引用资源，未提供影视资源上传、存储服务。</p>
 </footer>
@@ -268,8 +257,7 @@
             <i class="iconfont icon-a-zhiding5"></i>
         </div>
         <div class="dbicon">
-            <a id="numerous" href="#" style="color: #ffffff; font-weight: bold;" title="切換到繁體中文">繁</a>
-            <script src="../statics/js/font.js"></script>
+            <a href="#" id="numerous" style="color: #ffffff; font-weight: bold;" title="切換到繁體中文">繁</a>
         </div>
         <div class="dbicon" id="clothes" onclick="clothesChange();">
 
@@ -318,22 +306,28 @@
     </a>
 </div>
 
-<script type="text/javascript">
-    $("#clothes").on('click',function () {
-        $(this).children(".iconfont").toggleClass("icon-rijianmoshi");
-        $(this).children(".iconfont").toggleClass("icon-a-yejian2")
-    });
-</script>
-
 <div class="popup" id="note" style="display:none;">
     <div class="popup popup-ts open">
         <div class="popup-header">
             <h3 class="popup-title">公告内容</h3>
         </div>
         <div class="popup-main">
-            <p>哇！电影先生终于等到您啦！恭喜您开启了一个影视宝库！打今儿起，咱想看啥就看啥！让您不再错过任何一部优秀影片！</p><p class="popup-domain"><span>.NG 域名</span><strong><a href="../index.html" target="_blank">DianYi<em>.ng</em></a></strong></p><p class="popup-domain"><span>.NG 域名</span><strong><a href="https://dianying.xianshe.ng" target="_blank">DY.XianShe<em>.ng</em></a></strong></p><p class="popup-domain"><span>.COM 域名</span><strong><a href="https://xn--44qz85a01qpc.com" target="_blank">电影先生<em>.com</em></a></strong></p><p>将以上域名加入浏览器收藏夹，回家更方便。点此 <a href="../web.html" target="_blank" class="close-pop"><strong>获取电影先生最新域名</strong></a>。</p>	</div>
+            <p>
+                哇！电影先生终于等到您啦！恭喜您开启了一个影视宝库！打今儿起，咱想看啥就看啥！让您不再错过任何一部优秀影片！</p>
+            <p class="popup-domain"><span>.NG 域名</span><strong><a href="../index.html"
+                                                                    target="_blank">DianYi<em>.ng</em></a></strong></p>
+            <p class="popup-domain"><span>.NG 域名</span><strong><a href="https://dianying.xianshe.ng" target="_blank">DY.XianShe<em>.ng</em></a></strong>
+            </p>
+            <p class="popup-domain"><span>.COM 域名</span><strong><a href="https://xn--44qz85a01qpc.com"
+                                                                     target="_blank">电影先生<em>.com</em></a></strong>
+            </p>
+            <p>将以上域名加入浏览器收藏夹，回家更方便。点此 <a class="close-pop" href="../web.html"
+                                                             target="_blank"><strong>获取电影先生最新域名</strong></a>。
+            </p></div>
         <div class="popup-footer"><span class="popup-btn-o" onclick="closeclick()">我记住啦</span>
-            <div class="article-bg"></div><div class="article-bg01"></div></div> <!-- 弹窗公告-->
+            <div class="article-bg"></div>
+            <div class="article-bg01"></div>
+        </div> <!-- 弹窗公告-->
 
         <div class="popup popup-notice none">
             <div class="popup-icon"><img src="../statics/picture/backhome.svg"></div>
@@ -342,50 +336,27 @@
             <div class="popup-main">
                 <p>
                 <p>目前网络上出现了许多山寨电影先生的网站，以下是电影先生官方域名，请认准并保存，以防上当受骗。</p>
-                <p>-			<a><strong>DianYi.ng</strong></a><br>
-                    -			<a><strong>Www.DianYi.ng</strong></a><br>
-                    -			<a><strong>电影先生.Com</strong></a><br>
-                    -			<a><strong>DianYing.XianShe.ng</strong></a><br>
+                <p>- <a><strong>DianYi.ng</strong></a><br>
+                    - <a><strong>Www.DianYi.ng</strong></a><br>
+                    - <a><strong>电影先生.Com</strong></a><br>
+                    - <a><strong>DianYing.XianShe.ng</strong></a><br>
                 </p>
             </div>
             <div class="popup-footer">
-                <a href="../web.html" class="popup-btn-o">查看全部域名</a>
+                <a class="popup-btn-o" href="../web.html">查看全部域名</a>
             </div>
             <div class="close-popup" id="close-popup"><i class="icon-close-o"></i></div>
-        </div> <!-- 网址-->
+        </div>
+        <!-- 网址-->
 
 
-        <script type="text/javascript">
-            document.onkeydown=function(){
-
-                var e = window.event||arguments[0];
-
-
-                if(e.keyCode==123){
-                    alert('禁止调试');
-                    return false;
-                }
-            }
-
-            var threshold = 160;
-            window.setInterval(function() {
-                if (window.outerWidth - window.innerWidth > threshold ||
-                    window.outerHeight - window.innerHeight > threshold) {
-                    function disableDebugger() {
-                        debugger;
-                    }
-                    $(document).ready(function () {
-                        disableDebugger();
-                    });
-                }
-            }, 1e3);
-        </script>
         <div class="shortcuts-mobile-overlay"></div>
-        <script src="../statics/js/mxhtml.js"></script>
-        <!-- 底部广告位 --> <!-- 底部-->
+        <!-- 底部广告位 -->
+        <!-- 底部-->
 
     </div>
 </div>
+{{template "javascript" .}}
 </body>
 </html>
 {{end}}
