--- a/templates/default/top.html
+++ b/templates/default/top.html
@@ -163,30 +163,6 @@
     </div>
 </header>
 
-<script>
-    $(".nav-menu-search").click(function () {
-        $(".nav-search").addClass("block");
-    });
-    $(document).scroll(function () {
-        var H = $(document).scrollTop();
-        if (H > 20) {
-            $(".header-content").addClass("header-bg");
-        } else {
-            $(".header-content").removeClass("header-bg");
-        }
-        if (H > 140) {
-            $(".header-content").addClass("header-bg");
-            $(".search-dh").append($(".search-box"));
-            $(".nav-menu-search").click(function () {
-                $(".nav-search").addClass("block");
-            });
-        } else {
-            $(".header-content").removeClass("header-bg");
-            $(".search-main").append($(".search-box"));
-        }
-    });
-</script>
-
 <style>
     .title-top {
         background-image: url(statics/image/topbg.png);
@@ -906,7 +882,6 @@
         </div>
         <div class="dbicon">
             <a id="numerous" href="#" style="color: #ffffff; font-weight: bold" title="切換到繁體中文">繁</a>
-            <script src="statics/js/font.js"></script>
         </div>
         <div class="dbicon" id="clothes" onclick="clothesChange();">
             <i class="iconfont icon-a-yejian2"></i>
@@ -953,13 +928,6 @@
         <div class="grid-item-name">资讯</div>
     </a>
 </div>
-
-<script type="text/javascript">
-    $("#clothes").on("click", function () {
-        $(this).children(".iconfont").toggleClass("icon-rijianmoshi");
-        $(this).children(".iconfont").toggleClass("icon-a-yejian2");
-    });
-</script>
 
 <div class="popup" id="note" style="display: none">
     <div class="popup popup-ts open">
@@ -1024,34 +992,12 @@
         </div>
         <!-- 网址-->
 
-        <script type="text/javascript">
-            document.onkeydown = function () {
-                var e = window.event || arguments[0];
-
-                if (e.keyCode == 123) {
-                    alert("禁止调试");
-                    return false;
-                }
-            };
-
-            var threshold = 160;
-            window.setInterval(function () {
-                if (window.outerWidth - window.innerWidth > threshold || window.outerHeight - window.innerHeight > threshold) {
-                    function disableDebugger() {
-                        debugger;
-                    }
-                    $(document).ready(function () {
-                        disableDebugger();
-                    });
-                }
-            }, 1e3);
-        </script>
         <div class="shortcuts-mobile-overlay"></div>
-        <script src="statics/js/mxhtml.js"></script>
         <!-- 底部广告位 -->
         <!-- 底部-->
     </div>
 </div>
+{{template "javascript" .}}
 </body>
 </html>
 {{end}}
