统一抽离弹窗单独管理

--- a/templates/default/v/zongyi.html
+++ b/templates/default/v/zongyi.html
@@ -6559,54 +6559,7 @@
     </a>
 </div>
 
-<div class="popup" id="note" style="display:none;">
-    <div class="popup popup-ts open">
-        <div class="popup-header">
-            <h3 class="popup-title">公告内容</h3>
-        </div>
-        <div class="popup-main">
-            <p>
-                哇！电影先生终于等到您啦！恭喜您开启了一个影视宝库！打今儿起，咱想看啥就看啥！让您不再错过任何一部优秀影片！</p>
-            <p class="popup-domain"><span>.NG 域名</span><strong><a href="../index.html"
-                                                                    target="_blank">DianYi<em>.ng</em></a></strong></p>
-            <p class="popup-domain"><span>.NG 域名</span><strong><a href="https://dianying.xianshe.ng" target="_blank">DY.XianShe<em>.ng</em></a></strong>
-            </p>
-            <p class="popup-domain"><span>.COM 域名</span><strong><a href="https://xn--44qz85a01qpc.com"
-                                                                     target="_blank">电影先生<em>.com</em></a></strong>
-            </p>
-            <p>将以上域名加入浏览器收藏夹，回家更方便。点此 <a class="close-pop" href="../web.html"
-                                                             target="_blank"><strong>获取电影先生最新域名</strong></a>。
-            </p></div>
-        <div class="popup-footer"><span class="popup-btn-o" onclick="closeclick()">我记住啦</span>
-            <div class="article-bg"></div>
-            <div class="article-bg01"></div>
-        </div> <!-- 弹窗公告-->
-
-        <div class="popup popup-notice none">
-            <div class="popup-icon"><img src="{{.__STATIC__}}/picture/backhome.svg"></div>
-            <div class="popup-header">
-                <h3 class="popup-title">官方域名列表</h3></div>
-            <div class="popup-main">
-                <p>
-                <p>目前网络上出现了许多山寨电影先生的网站，以下是电影先生官方域名，请认准并保存，以防上当受骗。</p>
-                <p>- <a><strong>DianYi.ng</strong></a><br>
-                    - <a><strong>Www.DianYi.ng</strong></a><br>
-                    - <a><strong>电影先生.Com</strong></a><br>
-                    - <a><strong>DianYing.XianShe.ng</strong></a><br>
-                </p>
-            </div>
-            <div class="popup-footer">
-                <a class="popup-btn-o" href="../web.html">查看全部域名</a>
-            </div>
-            <div class="close-popup" id="close-popup"><i class="icon-close-o"></i></div>
-        </div> <!-- 网址-->
-
-
-        <div class="shortcuts-mobile-overlay"></div>
-        <!-- 底部广告位 -->
-        <!-- 底部-->
-    </div>
-</div>
+{{template "popup" .}}
 {{template "javascript" .}}
 </body>
 </html>
